--- a/clase02.Rmd
+++ b/clase02.Rmd
@@ -139,7 +139,7 @@ vacunas %>% mutate(total = (DOSIS_1 + DOSIS_2 + DOSIS_3)) %>% select(FECHA_ADMIN
 ```
 
 #### Calculamos totales agrupando por GENERO
-##### *goup_by()* y *summarise()*
+##### **goup_by()** y **summarise()**
 ```{r, echo=TRUE,  class.source='klippy'}
 library(ggplot2)
 
@@ -150,7 +150,10 @@ data1 <- vacunas %>%
          summarise(t = sum(total, na.rm=TRUE))
 
 data1
+```
 
+##### **fill**, **geom_bar**, **geom_text**
+```{r, echo=TRUE,  class.source='klippy'}
 ggplot(data1, aes(GENERO,t, fill = GENERO)) + 
   geom_bar(stat="identity", colour = "grey") +
   geom_text(aes(label= t), vjust= -0.5, color="black", size=4)
@@ -216,7 +219,7 @@ data3 %>% tally()
 ***
 
 #### Otro paso para 'acomodar' los datos:
-#### DOSIS_1, DOSIS_2, DOSIS_3, no son tres variables, son tres valores de la variable DOSIS...
+#### Las "variables" DOSIS_1, DOSIS_2, DOSIS_3, es mejor verlas como tres valores de una nueva variable, implícita en el set de datos, que podemos llamar DOSIS.
 #### [*tidyr*](https://tidyr.tidyverse.org/)
 #### [*tidyr::pivot_longer()*](https://tidyr.tidyverse.org/reference/pivot_longer.html)
 ```{r, echo=TRUE,  class.source='klippy'}
@@ -229,10 +232,17 @@ vacunas %>%
   pivot_longer(cols = c(DOSIS_1, DOSIS_2, DOSIS_3), names_to = "DOSIS", values_to = "aplicadas") %>%
   select(FECHA_ADMINISTRACION, GENERO, GRUPO_ETARIO, DOSIS, aplicadas)
 
-vacunas %>% pivot_longer(cols = c(DOSIS_1, DOSIS_2, DOSIS_3), names_to = "DOSIS", values_to = "aplicadas") %>%
-  select(FECHA_ADMINISTRACION, GENERO, GRUPO_ETARIO, DOSIS, aplicadas) %>%
-  group_by(GRUPO_ETARIO, GENERO, DOSIS) %>% summarise(t = sum(aplicadas)) %>%
-  ggplot(aes(x = GENERO, y = t, fill = GRUPO_ETARIO)) +
+data4 <- vacunas %>% 
+         pivot_longer(cols = c(DOSIS_1, DOSIS_2, DOSIS_3), names_to = "DOSIS", values_to = "aplicadas") %>%
+         select(FECHA_ADMINISTRACION, GENERO, GRUPO_ETARIO, DOSIS, aplicadas) %>%
+         group_by(GRUPO_ETARIO, GENERO, DOSIS) %>% summarise(t = sum(aplicadas))
+
+data4
+```
+
+##### **facet_wrap**
+```{r, echo=TRUE,  class.source='klippy'}
+data4 %>% ggplot(aes(x = GENERO, y = t, fill = GRUPO_ETARIO)) +
     geom_bar(stat="identity") +
     facet_wrap(~ DOSIS)
 ```
@@ -244,30 +254,30 @@ vacunas %>% pivot_longer(cols = c(DOSIS_1, DOSIS_2, DOSIS_3), names_to = "DOSIS"
 ##### *ggplot*, *aes*, *stat*, *position*, *facet*
 ##### *geom_bar* por defecto solo requiere *aes(x)* y hace un count
 ```{r, echo=TRUE,  class.source='klippy'}
-dfa <- data.frame(a = c("a","b","c","a"), b=c(2,5,2,1))
+dfa <- data.frame(v1 = c("a","b","c","a"), v2 = c(2,5,2,1))
 dfa
 ```
 
 ```{r, echo=TRUE,  class.source='klippy'}
-ggplot(dfa, aes(a)) + 
+ggplot(dfa, aes(v1)) + 
   geom_bar() 
 ```
 
 ##### El mismo gráfico con los valores por defecto explicitados:
 ```{r, echo=TRUE,  class.source='klippy'}
-ggplot(dfa, aes(a)) + 
+ggplot(dfa, aes(v1)) + 
   geom_bar(stat="count") 
 ```
 
 #### *geom_bar* con *stat = identity* agrupa por *x* ademas suma todos los casos
 #### requiere *aes(x, y)*
 ```{r, echo=TRUE,  class.source='klippy'}
-dfa <- data.frame(a = c("a","b","c"), b=c(3,5,2))
-ggplot(dfa, aes(a, b)) + 
+dfa <- data.frame(v1 = c("a","b","c"), v2 = c(3,5,2))
+ggplot(dfa, aes(v1, v2)) + 
    geom_bar(stat="identity") 
 
-dfa <- data.frame(a = c("a","b","c","a"), b=c(2,5,2,1))
-ggplot(dfa, aes(a, b)) + 
+dfa <- data.frame(v1 = c("a","b","c","a"), v2 = c(2,5,2,1))
+ggplot(dfa, aes(v1, v2)) + 
   geom_bar(stat="identity") 
 ```
 
