--- a/clase01_ejercicios.Rmd
+++ b/clase01_ejercicios.Rmd
@@ -16,7 +16,46 @@ klippy::klippy('')
 ***
 
 ### 01)
+#### Séa el set de datos "barrios":
+```{r, echo=TRUE,  class.source='klippy'}
+barrios <- read.csv("https://cdn.buenosaires.gob.ar/datosabiertos/datasets/barrios/barrios.csv", encoding = "UTF-8")
+```
+#### Donde "area" es el área de cada barrio medido en m2.
 
+#### cual es la superficie de CABA ? 
+```{r, echo=FALSE,  class.source='klippy'}
+sum(barrios$area)
+```
+
+### 02)
+#### que superficie tiene el barrio más pequeño ?
+```{r, echo=FALSE,  class.source='klippy'}
+min(barrios$area)
+```
+
+### 03)
+#### y en Km2 ?
+```{r, echo=FALSE,  class.source='klippy'}
+barrios$areaKm <- barrios$area/(1000*1000)
+sum(barrios$areaKm)
+min(barrios$areaKm)
+```
+
+### 04)
+#### cual es el barrio con más superficie ?
+```{r, echo=FALSE,  class.source='klippy'}
+barrios[barrios$area == max(barrios$area), "barrio"]
+```
+
+### 05)
+#### que barrios tienen mayor superficie que la superficie promedio.
+```{r, echo=FALSE,  class.source='klippy'}
+areapromedio <- mean(barrios$area)
+barrios[barrios$area > areapromedio, "barrio"]
+```
+
+
+### 06)
 #### Recordemos el ejemplo de la matriz de tarifas
 ```{r, echo=TRUE,  class.source='klippy'}
 # https://www.argentina.gob.ar/redsube/tarifas-de-transporte-publico-amba-2021
