posit en octubre

--- a/clase01.Rmd
+++ b/clase01.Rmd
@@ -60,6 +60,8 @@ Para algunas instalaciones de paquetes en Windows
 - [www.rstudio.com](https://www.rstudio.com/)
 - [www.rstudio.com/products/rstudio/download/](https://www.rstudio.com/products/rstudio/download/)
 
+#### RStudio se convierte en **Posit** en Octubre. [**posit.co**](https://posit.co/)
+
 ***
 
 ### Búsquedas y ayuda :
