--- a/clase02_ejercicios.Rmd
+++ b/clase02_ejercicios.Rmd
@@ -35,25 +35,25 @@ dplyr::count(barrios, wt = area, name = "Area Total")
 ```
 
 ### 2) que superficie tiene el barrio más pequeño ?
-```{r, echo=FALSE,  class.source='klippy'}
+```{r, echo=TRUE,  class.source='klippy'}
 min(barrios$area)
 ```
 
 ### 03) y en Km2 ?
-```{r, echo=FALSE,  class.source='klippy'}
+```{r, echo=TRUE,  class.source='klippy'}
 barrios %>% mutate(areaKm = area / (1000 * 1000)) %>% count(wt = areaKm, name = "Area CABA (Km2)")
 barrios %>% mutate(areaKm = area / (1000 * 1000)) %>% select(areaKm) %>% min()
 ```
 
 ### 04) cual es el barrio con más superficie ?
-```{r, echo=FALSE,  class.source='klippy'}
+```{r, echo=TRUE,  class.source='klippy'}
 maximo <- max(barrios$area)
 
 barrios %>% filter(area == maximo) %>% select(barrio, area)
 ```
 
 ### 05) que barrios tienen mayor superficie que la superficie promedio.
-```{r, echo=FALSE,  class.source='klippy'}
+```{r, echo=TRUE,  class.source='klippy'}
 areapromedio <- mean(barrios$area)
 
 barrios %>% filter(area > areapromedio) %>% select(barrio, area)
